trying to make the login work